px4_ws/logs/px4_offboard/build.make.000.log
[  0%] Built target tf2_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target diagnostic_msgs_generate_messages_lisp
[  0%] Built target _catkin_empty_exported_target
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target diagnostic_msgs_generate_messages_cpp
[  0%] Built target diagnostic_msgs_generate_messages_py
[  0%] Built target actionlib_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target mavros_msgs_generate_messages_cpp
[  0%] Built target nav_msgs_generate_messages_cpp
[  0%] Built target _px4_offboard_generate_messages_check_deps_JoyCommand
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target nav_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_py
[  8%] Built target mavros_msgs_generate_messages_lisp
[ 16%] Built target px4_offboard_generate_messages_py
[ 16%] Built target actionlib_generate_messages_py
[ 16%] Built target actionlib_generate_messages_lisp
[ 16%] Built target actionlib_msgs_generate_messages_lisp
[ 16%] Built target nav_msgs_generate_messages_lisp
[ 16%] Built target actionlib_msgs_generate_messages_py
[ 16%] Built target actionlib_msgs_generate_messages_cpp
[ 16%] Built target roscpp_generate_messages_lisp
[ 16%] Built target mavros_msgs_generate_messages_py
[ 16%] Built target tf2_msgs_generate_messages_lisp
[ 16%] Built target tf2_msgs_generate_messages_py
[ 25%] Built target px4_offboard_generate_messages_cpp
[ 33%] Built target px4_offboard_generate_messages_lisp
[ 66%] Built target teleop
[ 66%] Built target checker
[ 75%] [32mBuilding CXX object CMakeFiles/apriltag.dir/src/apriltag.cpp.o[0m
[ 75%] Built target px4_offboard_generate_messages
[ 83%] [32mBuilding CXX object CMakeFiles/SLAM.dir/src/SLAM.cpp.o[0m
In file included from /home/tuofeichen/SLAM/MAV-Project/px4_ws/src/px4_offboard/src/SLAM.cpp:2:0:
/home/tuofeichen/SLAM/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:112:18: error: expected constructor, destructor, or type conversion before ‘;’ token
   ros::spinOnce();
                  ^
/home/tuofeichen/SLAM/MAV-Project/px4_ws/src/px4_offboard/src/CtrlPx4.cpp:114:1: error: expected declaration before ‘}’ token
 }
 ^
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 91%] [32m[1mLinking CXX executable /home/tuofeichen/SLAM/MAV-Project/px4_ws/devel/lib/px4_offboard/apriltag[0m
[ 91%] Built target apriltag
make: *** [all] Error 2
